--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     </p>
     <p>
       Or send me a
-      <a href="https://wa.me/" target="_blank"> whatsapp message</a>
+      <a href="https://wa.me/2348107196213" target="_blank"> whatsapp message</a>
     </p>
 
     <p>
